<resources>
    <string name="app_name">My ToDo App</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_text">Add a new item...</string>
    <string name="title_activity_edit">Edit a ToDo Task</string>
    <string name="save">Save</string>
    <string name="edit_item_below">Edit Item Below:</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_add">Add a ToDo Task</string>
    <string name="task">Task</string>
    <string name="due_date">Due By</string>
    <string name="priority">Priority</string>
    <string name="status">Status</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="add_task">Add Task</string>
</resources>
