<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.apps.rmarathe.mytodoapp.AddActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnSaveNewItem">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/task"
                android:id="@+id/taskLblTextView"
                android:layout_column="6" />

            <EditText
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/edAddText"
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="24dp"
                android:layout_column="12"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/add_text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/due_date"
                android:id="@+id/dateLblTextView"
                android:layout_column="6" />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/datePicker"
                android:layout_weight="1"
                android:layout_marginBottom="24dp"
                android:layout_span="1"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_column="12" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/priority"
                android:id="@+id/priorityLblTextView"
                android:layout_column="6" />
            <Spinner
                android:layout_weight="1"
                android:layout_column="12"
                android:layout_marginBottom="24dp"
                android:id="@+id/taskPrioritySpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/status"
                android:id="@+id/statusLblTextView"
                android:layout_column="6" />
            <Spinner
                android:layout_weight="1"
                android:layout_column="12"
                android:layout_marginBottom="24dp"
                android:id="@+id/taskStatusSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </TableRow>


    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSaveNewItem"
        android:onClick="OnSaveAddItem"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
